k8s/airflow_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: wars
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      # ===============================
      # InitContainers
      # ===============================
      containers:
        # ===== WEBSERVER =====
        - name: airflow
          image: localhost:5000/airflow:latest
          command: ["airflow", "webserver"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
            - name: credentials
              mountPath: /opt/airflow/credentials
              readOnly: true

        # ===== SCHEDULER =====
        - name: airflow-scheduler
          image: localhost:5000/airflow:latest
          command: ["airflow", "scheduler"]
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
            - name: credentials
              mountPath: /opt/airflow/credentials
              readOnly: true

      # ===============================
      # Volúmenes
      # ===============================
      volumes:
        - name: dags
          emptyDir: {}
        - name: dags-configmap
          configMap:
            name: airflow-dags
        - name: credentials
          secret:
            secretName: gcp-credentials-secret

---
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
  namespace: wars
spec:
  selector:
    app: airflow
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  type: NodePort
