k8s/neo4j_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  namespace: wars
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
      annotations:
        config.alpha.kubernetes.io/env-from: "disable"
    spec:
      containers:
        - name: neo4j
          image: neo4j:4.4
          ports:
            - containerPort: 7474
            - containerPort: 7687
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
  namespace: wars
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
